[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "physense-utils"
version = "0.1.0"
description = "Shared utilities for the Physense simulation platform"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.0",
    "scipy>=1.13",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/physense_utils"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=physense_utils --cov-report=term-missing"

[tool.coverage.run]
source = ["src/physense_utils"]
